# agent-walkforward

./: .gitignore  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: sample_traces.jsonl
integrations/claude-code-skill/: SKILL.md
src/agent_walkforward/: __init__.py  api.py  cli.py  evaluate.py  loader.py  mcp_server.py  models.py  split.py
tests/: test_api.py  test_evaluate.py  test_loader.py  test_split.py
